--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,129 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins",sans-serif;
+}
+.header{
+    width: 100%;
+    height: 60px;
+    background-color: rgb(4, 4, 4);
+    border-bottom: 1px solid rgb(105, 105, 105);
+    color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    padding: 0px 4%;
+}
+.logom{
+    width: 70%;
+    display: flex;
+    align-items: center;
+}
+.logo{
+    width: 20%;
+    display: flex;
+    align-items: center;
+}
+.logo img{
+    width: 130px;
+}
+.list{
+    width: 55%;
+}
+.list>ul{
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    font-size: 19px;
+}
+.list>ul>li:hover{
+    cursor: pointer;
+    color: red;
+}
+.rightside{
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.addMovie,.login{
+    width: 50px;
+    height: 45px;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border:1px solid rgb(28, 28, 28);
+    cursor: pointer;
+}
+.addMovie:hover{
+    background-color: rgb(34, 34, 34);
+}
+.login{
+    width: 60px;
+    font-size: 18px;
+    background-color: transparent;
+    color: white;
+}
+.login:hover{
+    cursor: pointer;
+    background-color: rgb(34, 34, 34);
+}
+.main{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-bottom: 30px;
+    background-color: rgb(22, 22, 22);
+    color: white;
+}
+.cards{
+    width: 21%;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 40px;
+    box-shadow: rgba(100, 100, 100, 0.02) 0px 1px 3px 0px, rgba(101, 101, 101, 0.15) 0px 0px 0px 1px;
+    padding-bottom: 5px;
+    transition: 0.75s;
+}
+.cards:hover{
+    transform: scale(1.1);
+    z-index: 2;
+    border:1px solid red;
+}
+.cards>img{
+    width:100%;
+    padding: 1px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.cards>p{
+    font-size: 18px;
+    padding: 3px;
+}
+.crouseldiv>img{
+    width: 100%;
+    height: 400px;
+}
+.listofmovies{
+    width: 100%;
+    height: 200px;
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.listofmovies>div{
+    width: 19%;
+}
+.listofmovies>div>img{
+    width: 100%;
 }
