--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 *{
     margin: 0;
     padding: 0;
@@ -11,15 +12,17 @@
 .header{
     width: 100%;
     height: 60px;
-    background-color: rgb(4, 4, 4);
+    background-color: rgb(18, 18, 18);
     border-bottom: 1px solid rgb(105, 105, 105);
     color: rgb(255, 255, 255);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: sticky;
-    top: 0;
     padding: 0px 4%;
+}
+.home{
+    width: 100%;
+    background-color: rgb(22, 22, 22);
 }
 .logom{
     width: 70%;
@@ -82,7 +85,7 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     padding-bottom: 30px;
-    background-color: rgb(22, 22, 22);
+    background-color: rgb(18, 18, 18);
     color: white;
 }
 .cards{
@@ -109,6 +112,9 @@
     font-size: 18px;
     padding: 3px;
 }
+.crouseldiv{
+    margin-bottom: 30px;
+}
 .crouseldiv>img{
     width: 100%;
     height: 400px;
@@ -116,14 +122,20 @@
 .listofmovies{
     width: 100%;
     height: 200px;
-    margin-top: 40px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
+    margin-top: -20px;
 }
 .listofmovies>div{
-    width: 19%;
+    width: 19.5%;
 }
 .listofmovies>div>img{
     width: 100%;
+}
+.headline{
+    color: white;
+    padding-left: 1%;
+    font-size: 18px;
 }
